Dodałem kilka zadań

--- a/Zadania3.ipynb
+++ b/Zadania3.ipynb
@@ -82,7 +82,102 @@
    "id": "a6d2b019",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tutaj rozwiązanie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f27dd37",
+   "metadata": {},
+   "source": [
+    "# Zadanie 5\n",
+    "\n",
+    "Napisz skrypt, który odczyta zawartość pliku `pierwszy.txt` i wypisze liczby z niego w kolejności rosnącej."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70068ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tutaj rozwiązanie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a19dbc48",
+   "metadata": {},
+   "source": [
+    "# Zadanie 6\n",
+    "\n",
+    "Napisz skrypt, który utworzy plik `kurs_euro.txt` w którym w kolejnych wierszach znajdą się liczby zmienna przecinkowe z 2 miejscami po przecinku zakres wartości od 2.00 do 8.00. (Wstam 30 wierszy)\n",
+    "\n",
+    "## Hint \n",
+    "Wylosować liczbe zmienna przecinkową z zakresu można przez funkcje `uniform` z modulu `random`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7476e2b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tutaj rozwiązanie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52a3f529",
+   "metadata": {},
+   "source": [
+    "# Zadanie 7\n",
+    "Napisz skrypt, który wyliczy średni kurs euro na podstawie zawartości pliku `kurs_euro.txt` i wyświetli na ekranie."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fd779ce9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tutaj rozwiązanie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e660d94",
+   "metadata": {},
+   "source": [
+    "# Zadanie 8\n",
+    "Napisz skypt, który wyświetli zmiany kursu wiersz po wierszu z pliku `kurs_euro.txt`. np. dla pliku o zawartości\n",
+    "```\n",
+    "3.12\n",
+    "4.02\n",
+    "2.11\n",
+    "```\n",
+    "\n",
+    "Wypisze\n",
+    "```\n",
+    "Aktualny kurs 3.12 - poprzedni kurs BRAK - Zmiana kursu: BRAK\n",
+    "Aktualny kurs 4.02 - poprzedni kurs 3.12 - Zmiana kursu: +0.90\n",
+    "Aktualny kurs 2.11 - poprzedni kurs 4.02 - Zmiana kursu: -1.91\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "954ad753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# w"
+   ]
   }
  ],
  "metadata": {
