dodanie kolejnego zadania

--- a/Zadania3.ipynb
+++ b/Zadania3.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f27dd37",
+   "id": "0a6a3176",
    "metadata": {},
    "source": [
     "# Zadanie 5\n",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70068ff6",
+   "id": "5fc1c74d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a19dbc48",
+   "id": "932bea30",
    "metadata": {},
    "source": [
     "# Zadanie 6\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7476e2b8",
+   "id": "23e321a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52a3f529",
+   "id": "3fa85793",
    "metadata": {},
    "source": [
     "# Zadanie 7\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd779ce9",
+   "id": "775aa349",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e660d94",
+   "id": "2d734ef8",
    "metadata": {},
    "source": [
     "# Zadanie 8\n",
@@ -171,12 +171,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "954ad753",
+   "execution_count": 6,
+   "id": "43a62b62",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# w"
+    "# Tutaj rozwiązanie"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9994c570",
+   "metadata": {},
+   "source": [
+    "# Zadanie 9 \n",
+    "Napisz skrypt, który pobierze dane z pliku `kurs_euro.txt` a następnie wyświetli największą różnicę kursów (3 sąsiadujacych ze sobą) łączenie z tymi 2 kursami gdzie jest największa różnica.\n",
+    "np:\n",
+    "```\n",
+    "3.12\n",
+    "4.02\n",
+    "2.11\n",
+    "1.10\n",
+    "15.01\n",
+    "```\n",
+    "największa różnica to: 13.91 między 1.10 a 15.01"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0830efca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tutaj rozwiązanie"
    ]
   }
  ],
